Point creation is buggy with Orthographic camera (my blend file). #35462

Closed
opened 2013-05-22 10:30:48 +02:00 by paul geraskin · 4 comments
Member

%%%--- Operating System, Graphics card ---
linux 64, nvidia gtx

- Blender version with error, and version that worked ---

2.67.1

- Short description of error ---

Point creation is buggy with Orhographic camera on my blend.
Video: https://vimeo.com/66711850
Blend file: https://dl.dropboxusercontent.com/u/26887202/blender/point_creation_bug.blend
I guess this is raycasting bug...

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Ctrl+RightClick or Ctrl+LeftClick in EditMode.

%%%

%%%--- Operating System, Graphics card --- linux 64, nvidia gtx - Blender version with error, and version that worked --- 2.67.1 - Short description of error --- Point creation is buggy with Orhographic camera on my blend. Video: https://vimeo.com/66711850 Blend file: https://dl.dropboxusercontent.com/u/26887202/blender/point_creation_bug.blend I guess this is raycasting bug... - Steps for others to reproduce the error (preferably based on attached .blend file) --- Ctrl+RightClick or Ctrl+LeftClick in EditMode. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed.

Normal camera does fine, ortho views in viewport too. Only ortho-camera not. Should be easy to find.%%%

%%%Confirmed. Normal camera does fine, ortho views in viewport too. Only ortho-camera not. Should be easy to find.%%%

%%%fixed r56990%%%

%%%fixed r56990%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35462
No description provided.