fix own regression with ortho-camera adding points reported as [#35462]